Add physical model description

--- a/documentation/src/sections/abstract.tex
+++ b/documentation/src/sections/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-    PIC-код разрабатывается с 2022 года в Институте ядерной физики имени Будкера в качестве альтернативы ASTRA, SAM, WARP и другим кодам.
-    Для моделирования динамики частиц с использованием релятивистской разностной схемы.
-    Код написан на языке Python.
+    This PIC code has been developed since 2022 at the Budker Institute of Nuclear Physics
+    as an alternative to ASTRA, SAM, and other codes.
+    For particle dynamics simulation using finite difference scheme relativistic.
 \end{abstract}
