--- a/documentation/src/bibliography.bib
+++ b/documentation/src/bibliography.bib
@@ -1,10 +1,10 @@
-@article{Dirac,
-  title   = "The lorentz transformation and absolute time",
-  journal = "Physica ",
-  volume  = "19",
-  number  = "1-–12",
-  pages   = "888--896",
-  year    = "1953",
-  doi     = "10.1016/S0031-8914(53)80099-6",
-  author  = "P.A.M. Dirac"
+@article{Logatchev2011,
+author = {Logatchev, Pavel and Malyutin, Dmitriy and Starostenko, A.},
+year = {2011},
+month = {01},
+pages = {1-27},
+title = {Application of a low-energy electron beam as a tool of nondestructive diagnostics of intense charged-particle beams},
+volume = {51},
+journal = {Instruments and Experimental Techniques},
+doi = {10.1134/S0020441208010016}
 }
