--- a/documentation/src/main.tex
+++ b/documentation/src/main.tex
@@ -2,8 +2,10 @@
 
 \usepackage{preamble}
 
-\title{REDPIC Documentation}
-\author{Институт ядерной физики имени Г. И. Будкера СО РАН}
+\title{Relativistic Difference Scheme Particle-in-Cell (REDPIC) Documentation}
+
+\author{D.~Nikiforov and V.~Fedorov \\ \small{Budker Institute of Nuclear Physics, Novosibirsk, Russia}}
+
 \date{\today}
 
 \begin{document}
@@ -11,6 +13,6 @@
     \input{sections/abstract.tex}
     \tableofcontents
     \input{sections/introduction.tex}
+    \input{sections/physical_model.tex}
     \printbibliography
-    blalblab
 \end{document}
