--- a/documentation/src/preamble.sty
+++ b/documentation/src/preamble.sty
@@ -2,12 +2,12 @@
 \ProvidesPackage{preamble}
 
 %%% Работа с русским языком
-\usepackage{cmap}					% поиск в PDF
-\usepackage{mathtext} 				% русские буквы в формулах
-\usepackage[T2A]{fontenc}			% кодировка
-\usepackage[utf8]{inputenc}			% кодировка исходного текста
-\usepackage[english,russian]{babel}	% локализация и переносы
-\usepackage{indentfirst}
+\RequirePackage{cmap}					% поиск в PDF
+\RequirePackage{mathtext} 				% русские буквы в формулах
+\RequirePackage[T2A]{fontenc}			% кодировка
+\RequirePackage[utf8]{inputenc}			% кодировка исходного текста
+\RequirePackage[russian,english]{babel}	% локализация и переносы
+\RequirePackage{indentfirst}
 \frenchspacing
 
 \renewcommand{\epsilon}{\ensuremath{\varepsilon}}
@@ -20,8 +20,8 @@
 \renewcommand{\emptyset}{\varnothing}
 
 %%% Дополнительная работа с математикой
-\usepackage{amsmath,amsfonts,amssymb,amsthm,mathtools} % AMS
-\usepackage{icomma} % "Умная" запятая: $0,2$ --- число, $0, 2$ --- перечисление
+\RequirePackage{amsmath,amsfonts,amssymb,amsthm,mathtools} % AMS
+\RequirePackage{icomma} % "Умная" запятая: $0,2$ --- число, $0, 2$ --- перечисление
 
 %% Номера формул
 %\mathtoolsset{showonlyrefs=true} % Показывать номера только у тех формул, на которые есть \eqref{} в тексте.
@@ -35,16 +35,16 @@
 {\hbox{$\mathsurround=0pt #1$}}{}}
 
 %%% Работа с картинками
-\usepackage{graphicx}  % Для вставки рисунков
+\RequirePackage{graphicx}  % Для вставки рисунков
 \graphicspath{{images/}{images2/}}  % папки с картинками
 \setlength\fboxsep{3pt} % Отступ рамки \fbox{} от рисунка
 \setlength\fboxrule{1pt} % Толщина линий рамки \fbox{}
-\usepackage{wrapfig} % Обтекание рисунков текстом
+\RequirePackage{wrapfig} % Обтекание рисунков текстом
 
 %%% Работа с таблицами
-\usepackage{array,tabularx,tabulary,booktabs} % Дополнительная работа с таблицами
-\usepackage{longtable}  % Длинные таблицы
-\usepackage{multirow} % Слияние строк в таблице
+\RequirePackage{array,tabularx,tabulary,booktabs} % Дополнительная работа с таблицами
+\RequirePackage{longtable}  % Длинные таблицы
+\RequirePackage{multirow} % Слияние строк в таблице
 
 %%% Теоремы
 \theoremstyle{plain} % Это стиль по умолчанию, его можно не переопределять.
@@ -59,11 +59,11 @@
 \newtheorem*{nonum}{Решение}
 
 %%% Программирование
-\usepackage{etoolbox} % логические операторы
+\RequirePackage{etoolbox} % логические операторы
 
 %%% Страница
-\usepackage{extsizes} % Возможность сделать 14-й шрифт
-\usepackage{geometry} % Простой способ задавать поля
+\RequirePackage{extsizes} % Возможность сделать 14-й шрифт
+\RequirePackage{geometry} % Простой способ задавать поля
 	\geometry{top=25mm}
 	\geometry{bottom=35mm}
 	\geometry{left=35mm}
@@ -79,17 +79,17 @@
 % 	\lhead{Верхний левый}
 %	\cfoot{Нижний в центре} % По умолчанию здесь номер страницы
 
-\usepackage{setspace} % Интерлиньяж
+\RequirePackage{setspace} % Интерлиньяж
 %\onehalfspacing % Интерлиньяж 1.5
 %\doublespacing % Интерлиньяж 2
 %\singlespacing % Интерлиньяж 1
 
-\usepackage{lastpage} % Узнать, сколько всего страниц в документе.
+\RequirePackage{lastpage} % Узнать, сколько всего страниц в документе.
 
-\usepackage{soul} % Модификаторы начертания
+\RequirePackage{soul} % Модификаторы начертания
 
-\usepackage{hyperref}
-\usepackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
+\RequirePackage{hyperref}
+\RequirePackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
 \hypersetup{				% Гиперссылки
     unicode=true,           % русские буквы в раздела PDF
     pdftitle={Заголовок},   % Заголовок
@@ -105,15 +105,15 @@
     urlcolor=cyan           % на URL
 }
 
-\usepackage{csquotes} % Еще инструменты для ссылок
+\RequirePackage{csquotes} % Еще инструменты для ссылок
 
-\usepackage[style=authoryear,maxcitenames=2,backend=biber,sorting=nty]{biblatex}
+\RequirePackage[style=alphabetic,maxcitenames=2,backend=biber,sorting=nty]{biblatex}
 \addbibresource{bibliography.bib}
 
 %\bibliographystyle{plain} % Стиль библиографии
 
-\usepackage{multicol} % Нескоßлько колонок
+\RequirePackage{multicol} % Нескоßлько колонок
 
-\usepackage{tikz} % Работа с графикой
-\usepackage{pgfplots}
-\usepackage{pgfplotstable}
+\RequirePackage{tikz} % Работа с графикой
+\RequirePackage{pgfplots}
+\RequirePackage{pgfplotstable}
